add-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-velero-label
  annotations:
    policies.kyverno.io/title: Add Label for backup
    policies.kyverno.io/category: label, backup
    policies.kyverno.io/subject: Labels
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      By default, add a label to say that you want to backup your ressources
spec:
  rules:
  - name: add-velero-label
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            saved-by-velero: "true"
    exclude:
      any:
      - resources:
          namespaces:
          - sonar-system
          - "openshift*"
          - kyverno
          - falco
          - etcd-backup
          - "kube*"
          - "vault*"
          - keycloak
          - grafana
